# open-earth-benchmarks

./: CMakeLists.txt  LICENSE.TXT  README.md
include/: util.h
kernels/: fastwavesuv.h  fvtp2d.h  hadvuv.h  hadvuv5th.h  hdiffsa.h  hdiffsmag.h  laplace.h  nh_p_grad.h  p_grad_c.h  uvbke.h
src/: fastwavesuv.cpp  fvtp2d.cpp  hadvuv.cpp  hadvuv5th.cpp  hdiffsa.cpp  hdiffsmag.cpp  laplace.cpp  nh_p_grad.cpp  p_grad_c.cpp  uvbke.cpp
